sys/netinet/tcp_output.c
@@ -688,6 +688,8 @@ after_sack_rexmit:
 		     recwin <= (long)(so->so_rcv.sb_hiwat / 8) ||
 		     so->so_rcv.sb_hiwat <= 8 * tp->t_maxseg))
 			goto send;
+		if (2 * adv >= (int32_t)so->so_rcv.sb_hiwat)
+			goto send;
 	}
 dontupdate:
 
